Bug 436790 - Back/Forward mouse button does not work anymore
Summary: Back/Forward mouse button does not work anymore
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kirigami
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.80.0
Platform: Other Linux
: NOR normal
Target Milestone: Not decided
Assignee: Marco Martin
URL:
Keywords: regression
: 437172 447710 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-05-08 19:20 UTC by Anthony Fieroni
Modified: 2022-09-20 18:59 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.99
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anthony Fieroni 2021-05-08 19:20:56 UTC
SUMMARY

Since 5.80 i guess, last 3 versions, back/forward buttons stops to work in Discover and System Settings.

STEPS TO REPRODUCE
1. Open Discover
2. Navigate to package
3. Click on mouse back/forward button (if you do on thumbnail it's registered as normal left button)


OBSERVED RESULT
Clicking back/forward buttons isn't work furthermore in Discover it's evaluated as left click


EXPECTED RESULT
Back button goes back to previous view, forward to next one.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma
(available in About System)
KDE Plasma Version: 5.21.5
KDE Frameworks Version: 5.82
Qt Version: 5.15.2 (+KDE patches)

ADDITIONAL INFORMATION
Comment 1 Nate Graham 2021-05-18 21:17:17 UTC
*** Bug 437172 has been marked as a duplicate of this bug. ***
Comment 2 gudvinr+kde 2021-05-20 15:57:23 UTC
Yes! So annoying.
Comment 3 Andrew Shark 2021-10-23 14:57:04 UTC
This is also in Download New Staff windows, such as for example in Dolphin: settings -> context menu -> download new services.
Comment 4 Nate Graham 2022-01-12 01:16:36 UTC
*** Bug 447710 has been marked as a duplicate of this bug. ***
Comment 5 Bug Janitor Service 2022-09-20 11:57:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kirigami/-/merge_requests/752
Comment 6 Arjen Hiemstra 2022-09-20 18:58:55 UTC
Git commit 11e63f54dd66d0876392aef5b3c35e26b609c228 by Arjen Hiemstra.
Committed on 20/09/2022 at 11:57.
Pushed by ngraham into branch 'master'.

Restore going back/forward in ColumnView using back/forward mouse buttons

This broke when dragging was disabled for ColumnView but we shouldn't
disable all mouse interaction.

M  +4    -4    src/columnview.cpp

https://invent.kde.org/frameworks/kirigami/commit/11e63f54dd66d0876392aef5b3c35e26b609c228