Restore going back/forward in ColumnView using back/forward mouse buttons

This broke when dragging was disabled for ColumnView but we shouldn't
disable all mouse interaction.

BUG: 436790